kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: practiceapp-service
spec:
  type: NodePort
  selector:
    app: practiceapp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
